added album cover and link to spotify

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src='app.js'></script>
   </head>
   <body>
+  <h1>MUSIC FUN</h1>
     <main>
       <div>
         <input id="search-query" name="search-query" />
